gitops/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.4
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
        volumeMounts:
        - name: emails
          mountPath: /etc/oauth2-proxy
      volumes:
      - name: emails
        secret:
          secretName: oauth2-proxy
          items:
          - key: AUTHENTICATED_EMAILS
            path: authenticated-emails
